--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -8,3 +8,4 @@
 <h3>Custom Property Binding</h3>
 <app-property-binding [result]="10"></app-property-binding>
 <app-enent-binding (clicked)="onClicked($event)" ></app-enent-binding>
+<app-two-way-binding></app-two-way-binding>
