--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>
   {{title}}
 </h1>
-
-<app-databinding></app-databinding>
-<app-lifecycle *ngIf="!delete" ></app-lifecycle>
+<app-lifecycle *ngIf="!delete" [bindable]="boundValue" >
+  <p>{{test}}</p>
+</app-lifecycle>
 <button (click)="delete = true">Click to delete</button>
+<button (click)="test = 'changed value'">Click to change content</button>
+<button (click)="boundValue = 2000">Click to change binding</button>
